--- a/Crawl_data/crawl.ipynb
+++ b/Crawl_data/crawl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +195,147 @@
     "\n",
     "# Lưu vào file CSV\n",
     "pivot_df.to_csv(r'A:\\\\UET-VNU\\\\Covid19_KNK\\\\Datacovid19\\\\worldbank_data_g20_vietnam_2021_2022.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                    0           1       2  \\\n",
+      "0                                                None        None    None   \n",
+      "1                                          Cả nước[b]  11.549.848  42.789   \n",
+      "2                                              Hà Nội   1.646.923   1.232   \n",
+      "3                                     TP. Hồ Chí Minh     629.018  19.985   \n",
+      "4                                           Hải Phòng     537.527     138   \n",
+      "..                                                ...         ...     ...   \n",
+      "61                                          Sóc Trăng      34.457     634   \n",
+      "62                                            Kon Tum      26.342       1   \n",
+      "63                                          Hậu Giang      17.900     231   \n",
+      "64                                         Ninh Thuận       9.001      60   \n",
+      "65  ^ Tỉnh thành nơi xác nhận nhiễm, không phải qu...        None    None   \n",
+      "\n",
+      "       3  \n",
+      "0   None  \n",
+      "1    140  \n",
+      "2      2  \n",
+      "3      3  \n",
+      "4      5  \n",
+      "..   ...  \n",
+      "61     0  \n",
+      "62     0  \n",
+      "63     0  \n",
+      "64     0  \n",
+      "65  None  \n",
+      "\n",
+      "[66 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "\n",
+    "url = \"https://vi.wikipedia.org/wiki/Bản_mẫu:Dữ_liệu_đại_dịch_COVID-19/Thống_kê_tại_Việt_Nam\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    table = soup.find('table', {'class': 'wikitable'})\n",
+    "\n",
+    "    rows = table.find_all('tr')\n",
+    "    data = []\n",
+    "    for row in rows:\n",
+    "        cols = row.find_all('td')\n",
+    "        cols = [col.text.strip() for col in cols]\n",
+    "        data.append(cols)\n",
+    "\n",
+    "    # Tạo DataFrame từ dữ liệu đã lấy\n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    # Loại bỏ các cột có chỉ số 0 và 64\n",
+    "    \n",
+    "\n",
+    "    # Hiển thị DataFrame sau khi loại bỏ các cột\n",
+    "    print(df)\n",
+    "else:\n",
+    "    print(\"Không thể truy cập trang web\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = df.drop([0, 1, 65])\n",
+    "\n",
+    "\n",
+    "df = df.drop(columns=[3])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame sau khi loại bỏ dấu tiếng Việt:\n",
+      "                  0          1       2\n",
+      "2            Ha Noi  1.646.923   1.232\n",
+      "3   TP. Ho Chi Minh    629.018  19.985\n",
+      "4         Hai Phong    537.527     138\n",
+      "5           Nghe An    502.049     145\n",
+      "6         Bac Giang    391.440      92\n",
+      "..              ...        ...     ...\n",
+      "60       Tien Giang     39.902   1.290\n",
+      "61        Soc Trang     34.457     634\n",
+      "62          Kon Tum     26.342       1\n",
+      "63        Hau Giang     17.900     231\n",
+      "64       Ninh Thuan      9.001      60\n",
+      "\n",
+      "[63 rows x 3 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\FPT\\AppData\\Local\\Temp\\ipykernel_16652\\3503322141.py:6: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df = df.applymap(lambda x: unidecode(x) if isinstance(x, str) else x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from unidecode import unidecode\n",
+    "\n",
+    "# Giả sử bạn đã có DataFrame df\n",
+    "# Áp dụng unidecode cho tất cả các giá trị trong DataFrame\n",
+    "df = df.applymap(lambda x: unidecode(x) if isinstance(x, str) else x)\n",
+    "\n",
+    "# Hiển thị DataFrame sau khi loại bỏ dấu tiếng Việt\n",
+    "print(\"DataFrame sau khi loại bỏ dấu tiếng Việt:\")\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(r'A:\\\\UET-VNU\\\\Covid19_KNK\\\\Datacovid19\\\\province.csv', index=False)"
    ]
   }
  ],
