--- a/phantich/World.ipynb
+++ b/phantich/World.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "import plotly.express as px\n",
-    "from matplotlib.ticker import FuncFormatter "
+    "from matplotlib.ticker import FuncFormatter \n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +31,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tổng quan về tình hình dịch covid 19"
+    "## Tổng quan về tình hình dịch covid 19"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Biều đồ số ca nhiễm mới và tử vong mới theo thời gian"
+    "### Biều đồ số ca nhiễm mới và tử vong mới theo thời gian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## tích lũy số ca nhễm và tử vong"
+    "### tích lũy số ca nhễm và tử vong"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3537,7 +3538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5061,7 +5062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5135,7 +5136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5181,7 +5182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5228,7 +5229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5335,7 +5336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5372,7 +5373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -5415,7 +5416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -5524,7 +5525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -5580,7 +5581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5622,7 +5623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -5703,7 +5704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5719,14 +5720,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FPT\\AppData\\Local\\Temp\\ipykernel_11868\\1388812549.py:5: SettingWithCopyWarning:\n",
+      "C:\\Users\\FPT\\AppData\\Local\\Temp\\ipykernel_3372\\1388812549.py:5: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -5792,7 +5793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5883,6 +5884,58 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  iso_code  total_cases\n",
+      "0      ABW      44224.0\n",
+      "1      AFG     235214.0\n",
+      "2      AGO     107481.0\n",
+      "3      AIA       3904.0\n",
+      "4      ALB     335047.0\n",
+      "  FIFA   Dial ISO3166-1-Alpha-3 MARC   is_independent  ISO3166-1-numeric  \\\n",
+      "0  AFG     93               AFG   af              Yes                  4   \n",
+      "1  ALD    358               ALA            Part of FI                248   \n",
+      "2  ALB    355               ALB   aa              Yes                  8   \n",
+      "3  ALG    213               DZA   ae              Yes                 12   \n",
+      "4  ASA  1-684               ASM   as  Territory of US                 16   \n",
+      "\n",
+      "     GAUL FIPS WMO ISO3166-1-Alpha-2  ...    official_name_ru Global Name  \\\n",
+      "0     1.0   AF  AF                AF  ...          Афганистан       World   \n",
+      "1  1242.0                         AX  ...  Аландских островов       World   \n",
+      "2     3.0   AL  AB                AL  ...             Албания       World   \n",
+      "3     4.0   AG  AL                DZ  ...               Алжир       World   \n",
+      "4     5.0   AQ                    AS  ...  Американское Самоа       World   \n",
+      "\n",
+      "     Capital Continent  TLD          Languages Geoname ID CLDR display name  \\\n",
+      "0      Kabul        AS  .af  fa-AF,ps,uz-AF,tk    1149361       Afghanistan   \n",
+      "1  Mariehamn        EU  .ax              sv-AX     661882   Kepulauan Aland   \n",
+      "2     Tirana        EU  .al              sq,el     783754           Albania   \n",
+      "3    Algiers        AF  .dz              ar-DZ    2589581           Algeria   \n",
+      "4  Pago Pago        OC  .as        en-AS,sm,to    5880801     Samoa Amerika   \n",
+      "\n",
+      "  EDGAR                                        wikidata_id  \n",
+      "0    B2  https://www.wikidata.org/wiki/https://www.wiki...  \n",
+      "1   NaN  https://www.wikidata.org/wiki/https://www.wiki...  \n",
+      "2    B3  https://www.wikidata.org/wiki/https://www.wiki...  \n",
+      "3    B4  https://www.wikidata.org/wiki/https://www.wiki...  \n",
+      "4    B5  https://www.wikidata.org/wiki/https://www.wiki...  \n",
+      "\n",
+      "[5 rows x 56 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_cases.head())       # In ra các dòng đầu tiên của df_cases\n",
+    "print(df_territory.head())   # In ra các dòng đầu tiên của df_territory\n"
    ]
   }
  ],
